--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
     <title>Marker</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- build:css bower_components/CodeMirror/lib/codemirror.css -->
+    <link rel="stylesheet" href="bower_components/CodeMirror/lib/codemirror.css">
+    <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
